# Deep-Research

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: basic_example.py
experiments/: RETROFIT_DATA_LEAK_FIX.md  RETROFIT_README.md  analyze_depth_scaling.py  analyze_eigenvalue_spectrum.py  analyze_layerwise_conditioning.py  analyze_sample_diversity.py  compare_retrofit_results.py  debug_tinystories_data.py  exp_1_1_depth_scaling.py  generate_hf_samples.py  generate_retrofit_samples.py  geometry_retrofit.py  hf_config.json  hf_model.py  measure_hf_conditioning.py  measure_hf_conditioning_v2.py  mnist_test.py  run_retrofit_comparison.sh  tinystories_gpt4_eval.py  tinystories_gpt_geom.py  tinystories_sweep.py  verify_sweep_issue.sh
experiments/baselines/: __init__.py  gru_baseline.py  lstm_baseline.py  transformer_baseline.py
src/deep_linear_ts/: __init__.py  data.py  evaluate.py  geometry.py  glt.py  layers.py  models.py  train.py  utils.py
